do not delete h2-file on shutdown

--- a/test/h2/src/main/resources/application.yml
+++ b/test/h2/src/main/resources/application.yml
@@ -26,6 +26,9 @@ spring:
 ---
 spring:
   profiles: h2-201803281207
+  jpa:
+    hibernate:
+      ddl-auto: update
 ranked:
   h2:
     path: ./test/h2/src/main/resources/h2/201803281207
