--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -18,6 +18,17 @@
       <artifactId>spring-boot-starter-validation</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.axonframework</groupId>
+      <artifactId>axon-core</artifactId>
+      <version>${axon.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>
