--- a/backend/model/pom.xml
+++ b/backend/model/pom.xml
@@ -17,6 +17,12 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.axonframework</groupId>
+      <artifactId>axon-core</artifactId>
+      <version>${axon.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>cz.jirutka.validator</groupId>
       <artifactId>validator-spring</artifactId>
     </dependency>
