--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -44,7 +44,7 @@
 
       <dependency>
         <groupId>de.holisticon.ranked.service</groupId>
-        <artifactId>ranked-user-service</artifactId>
+        <artifactId>ranked-user-init</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
