--- a/backend/services/user-init/pom.xml
+++ b/backend/services/user-init/pom.xml
@@ -9,13 +9,16 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>ranked-user-service</artifactId>
+  <artifactId>ranked-user-init</artifactId>
 
   <dependencies>
     <dependency>
       <groupId>de.holisticon.ranked</groupId>
       <artifactId>ranked-model</artifactId>
-      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>de.holisticon.ranked.extension</groupId>
+      <artifactId>ranked-kotlin-extensions</artifactId>
     </dependency>
   </dependencies>
 </project>
