--- a/backend/view/wall/pom.xml
+++ b/backend/view/wall/pom.xml
@@ -14,7 +14,7 @@
   <dependencies>
     <dependency>
       <groupId>de.holisticon.ranked.service</groupId>
-      <artifactId>ranked-user-service</artifactId>
+      <artifactId>ranked-user-init</artifactId>
     </dependency>
   </dependencies>
 
