refactor view structure, add config view, fixes #70

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,8 +20,8 @@
     <module>model</module>
 
     <module>command</module>
-    <module>view</module>
     <module>services</module>
+    <module>views</module>
   </modules>
 
   <dependencyManagement>
