--- a/backend/views/player/pom.xml
+++ b/backend/views/player/pom.xml
@@ -5,11 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>de.holisticon.ranked</groupId>
-    <artifactId>ranked-view-root</artifactId>
+    <artifactId>ranked-views</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>ranked-view-leaderboard</artifactId>
-
+  <artifactId>ranked-view-player</artifactId>
 
 </project>
