--- a/backend/application/pom.xml
+++ b/backend/application/pom.xml
@@ -37,6 +37,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <artifactId>ranked-view-configuration</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <artifactId>ranked-command</artifactId>
       <groupId>${project.groupId}</groupId>
       <version>${project.version}</version>
