--- a/backend/application/pom.xml
+++ b/backend/application/pom.xml
@@ -13,6 +13,7 @@
 
   <properties>
     <dockerfile.skip>false</dockerfile.skip>
+    <springfox.version>2.8.0</springfox.version>
   </properties>
 
   <dependencies>
@@ -48,14 +49,20 @@
     </dependency>
 
     <dependency>
-      <groupId>io.toolisticon.springboot</groupId>
-      <artifactId>springboot-swagger-starter</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.axonframework</groupId>
       <artifactId>axon-spring-boot-starter</artifactId>
       <version>${axon.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>${springfox.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>${springfox.version}</version>
     </dependency>
 
     <dependency>
