Added stats for teams

--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -31,6 +31,8 @@ axon:
         mode: tracking
       Player:
         mode: tracking
+      Team:
+        mode: tracking
       PlayerLeaderBoard:
         mode: tracking
       Logging:
