Backend Seacon config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - "/var/lib/docker/volumes/ranked-mysql-data/_data:/var/lib/mysql"
+      - "/tmp/docker_mysql:/var/lib/mysql"
     container_name: ranked_mysql
 
 
