Safari foo config

--- a/frontend/src/main/resources/static/manifest.json
+++ b/frontend/src/main/resources/static/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "Ranked",
   "name": "Holisticon Kicker Application",
+  "display": "standalone",
   "icons": [
     {
       "src": "img/icon.png",
