--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts-ts": "2.10.0",
     "react-touch": "^0.4.3",
+    "react-vis": "^1.10.0",
     "redux": "^3.7.2",
     "rxjs": "^5.5.10",
     "tslint": "^5.8.0",
