--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-redux": "^5.0.11",
     "axios": "0.17.1",
     "history": "^4.7.2",
+    "query-string": "^6.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/jest": "^22.0.1",
     "@types/node": "^9.3.0",
+    "@types/query-string": "^6.1.0",
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "@types/react-touch": "^1.8.1",
