--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^4.0.7",
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
     "@types/react-router-redux": "^5.0.11",
+    "@types/socket.io": "^1.4.36",
+    "@types/socket.io-client": "^1.4.32",
     "axios": "0.17.1",
+    "express": "^4.16.3",
     "history": "^4.7.2",
     "query-string": "^6.1.0",
     "react": "^16.2.0",
@@ -22,8 +26,10 @@
     "react-vis": "^1.10.0",
     "redux": "^3.7.2",
     "rxjs": "^5.5.10",
+    "socket.io": "^2.1.1",
     "tslint": "^5.8.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "websocket": "^1.0.26"
   },
   "scripts": {
     "on": "webpack-dev-server",
