--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -11,10 +11,14 @@ spring:
   jpa:
     generate-ddl: false
     hibernate.ddl-auto: update
-    properties:
+    properties:version
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
     show-sql: false
+  flyway:
+    enabled: true
+    locations: "classpath:db/migrations/{vendor}"
+
 
 ranked:
   scoreToWinSet: 6
