--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,7 +18,7 @@
     "noUnusedLocals": true
   },
   "include": [
-    "./src/**/*"
+    "./src/main/js/**/*"
   ],
   "exclude": [
     "node_modules",
