disable flyway for local h2 (in memory) instances

--- a/backend/application/src/main/resources/application-local.yml
+++ b/backend/application/src/main/resources/application-local.yml
@@ -10,6 +10,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
     show-sql: false
+  flyway:
+      enabled: false
+      locations: "classpath:db/migrations/{vendor}"
 
 ranked:
   h2:
