--- a/backend/application/src/main/resources/application.yml
+++ b/backend/application/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: ranked
   datasource:
-      url: jdbc:mysql://mysql:11033/ranked?useSSL=false
+      url: jdbc:mysql://ranked_mysql:11033/ranked?useSSL=false
       username: ranked
       password: ranked
   jpa:
