--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,9 @@ services:
       - mysql
       - backend
       - frontend
-    command: mysql:11033 backend:8081 frontend:8080
+    command: ranked_mysql:3306 backend:8081 frontend:8080
+    networks:
+      - network1
 
 networks:
   network1:
